<resources>
    <string name="app_name">EjercicioDeFragments</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="img_pelicula">Imagen de la película</string>
    <string name="label_nombre">Nombre</string>
    <string name="label_fecha_nac">F. Nacimiento</string>
    <string name="hint_nombre_actor">Introduce nombre</string>
    <string name="hint_fecha_nac">Introduce fecha</string>
    <string name="btn_editar">Editar</string>
    <string name="btn_guardar">Guardar</string>
    <string name="actor_photo_desc">Foto del actor</string>
    <string name="label_fecha">Fecha</string>
    <string name="label_hora">Hora\n</string>

</resources>