<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vista.acticidades.VistaActor">

    <!-- Barra superior -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarActor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        app:theme="@style/ToolbarTheme"
        app:title="Detalle del Actor"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Imagen del actor -->

    <!-- Etiqueta "Nombre" -->

    <!-- Campo de texto para el nombre -->

    <ImageView
        android:id="@+id/ivActorFoto"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:contentDescription="@string/actor_photo_desc"
        android:src="@mipmap/ic_launcher_round"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarActor" />

    <TextView
        android:id="@+id/tvLabelNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="72dp"
        android:text="@string/label_nombre"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivActorFoto" />

    <EditText
        android:id="@+id/etActorNombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:inputType="textPersonName"
        android:hint="@string/hint_nombre_actor"
        android:importantForAutofill="yes"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="@id/tvLabelNombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLabelNombre"
        android:layout_marginTop="8dp" />

    <!-- Etiqueta "F. Nacimiento" -->
    <TextView
        android:id="@+id/tvLabelFecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_fecha_nac"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/tvLabelNombre"
        app:layout_constraintTop_toBottomOf="@id/etActorNombre"
        android:layout_marginTop="24dp" />

    <!-- Campo de texto para la fecha de nacimiento -->
    <EditText
        android:id="@+id/etActorFecha"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:inputType="date"
        android:hint="@string/hint_fecha_nac"
        android:importantForAutofill="yes"
        app:layout_constraintStart_toStartOf="@id/tvLabelFecha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLabelFecha"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp" />

    <!-- Botón "Editar" -->

    <!-- Botón "Guardar" (deshabilitado al principio) -->

    <Button
        android:id="@+id/btEditar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="96dp"
        android:text="@string/btn_editar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etActorFecha" />

    <Button
        android:id="@+id/btGuardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="96dp"
        android:enabled="false"
        android:text="@string/btn_guardar"
        app:layout_constraintStart_toEndOf="@id/btEditar"
        app:layout_constraintTop_toBottomOf="@id/etActorFecha" />

</androidx.constraintlayout.widget.ConstraintLayout>
